--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -261,7 +261,7 @@ ZimmerEuze06,
 }
 @article{uml,
   author = {S. Cranefield and M. Purvis},
-  title = {UML as an ontology modelling language},
+  title = {{UML} as an ontology modelling language},
   journal = {In Proceedings of the Workshop on Intelligent Information Integration, 16th International Joint Conference on Artificial Intelligence (IJCAI-99), 1999. \url{http://sunsite.informatik.rwth-aachen.de/Publications/CEUR-WS/Vol-23/cranefield-ijcai99-iii.pdf}\todonote[author=Christoph Lange,date=D:201107151858+02'00',type=todo]{Properly integrate this (or a newer one)}},
   year = 1999,
 }
@@ -476,7 +476,7 @@ We distinguish three kinds of heterogeneity:
 @INCOLLECTION{knapp-wuttke:models06wsh:2007,
   AUTHOR = {Alexander Knapp and
             Jochen Wuttke},
-  TITLE  = {Model Checking of UML 2.0 Interactions},
+  TITLE  = {Model Checking of {UML} 2.0 Interactions},
   EDITOR = {Thomas Kühne},
   BOOKTITLE = {Reports Rev. Sel. Papers Wsh.s Symp.s MoDELS 2006},
   PUBLISHER = {Springer},
@@ -492,7 +492,7 @@ We distinguish three kinds of heterogeneity:
   AUTHOR = {Alexander Knapp and
             Till Mossakowski and
             Markus Roggenbach},
-  TITLE = {An Institutional Framework for Heterogeneous Formal Development in UML},
+  TITLE = {An Institutional Framework for Heterogeneous Formal Development in {UML}},
   YEAR = {2014},
   NOTE = {CoRR abs/1403.7747},
   URL  = {http://arxiv.org/abs/1403.7747},
@@ -699,7 +699,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
                Frank Wolter and
                Michael Zakharyaschev},
   title     = {Logic-based ontology comparison and module extraction, with an application
-               to DL-Lite},
+               to {DL-Lite}},
   journal   = {Artif. Intell.},
   volume    = {174},
   number    = {15},
@@ -721,3 +721,15 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
   pages = "1--95",
   pubs = {mkohlhase,frabe,projects/omdoc}}
 
+@InProceedings{IbanezEtAl15,
+  author =       {Yazmin Angelica Ibanez and Till Mossakowski and Andrzej Tarlecki and Don Sannella},
+  title =        {Notions of Modularity for Ontologies and Specifications},
+  booktitle = {Logic, Rewriting, and Concurrency: A Festschrift Symposium in Honor of José Meseguer},
+  year =      {2015},
+  editor =    {Narciso Marti-Oliet et al.},
+  OPTvolume =    {},
+  series =    {Lecture Notes in Computer Science},
+  OPTpages =     {},
+  publisher = {Springer},
+  note =         {To appear},
+}
